Fixed an issue with getName for all classes

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,40 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">asdf asdf</h2>
+        <h2 class="card-title">a a</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: asdf</li>
-            <li class="list-group-item">Email: <a href="mailto:asdf">asdf</a></li>
-            <li class="list-group-item">Office number: asdf</li>
+            <li class="list-group-item">ID: a</li>
+            <li class="list-group-item">Email: <a href="mailto:rafaelrosas19@gmail.com">rafaelrosas19@gmail.com</a></li>
+            <li class="list-group-item">Office number: a</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">we wer</h2>
+        <h2 class="card-title">a a</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: wer</li>
-            <li class="list-group-item">Email: <a href="mailto:wer">wer</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/wdfg" target="_blank" rel="noopener noreferrer">wdfg</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">werg drtjh</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: fghj</li>
-            <li class="list-group-item">Email: <a href="mailto:fghj">fghj</a></li>
-            <li class="list-group-item">School: fghj</li>
+            <li class="list-group-item">ID: a</li>
+            <li class="list-group-item">Email: <a href="mailto:aa@gmail.com">aa@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/a" target="_blank" rel="noopener noreferrer">a</a></li>
         </ul>
     </div>
 </div>
