--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,27 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">a a</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: a</li>
-            <li class="list-group-item">Email: <a href="mailto:rafaelrosas19@gmail.com">rafaelrosas19@gmail.com</a></li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:as@a.com">as@a.com</a></li>
             <li class="list-group-item">Office number: a</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">a a</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: a</li>
-            <li class="list-group-item">Email: <a href="mailto:aa@gmail.com">aa@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/a" target="_blank" rel="noopener noreferrer">a</a></li>
         </ul>
     </div>
 </div>
